--- a/index.html
+++ b/index.html
@@ -3728,7 +3728,7 @@ The operation completed successfully.
 </blockquote>
 
 <pre>
-iLOrest > <font color="#01a982">setpassword "" oldpassword</font>
+iLOrest > <font color="#01a982">setpassword --newpassword None --currentpassword newpass1/font>
 setpassword --newpassword None --currentpassword newpass1
 The operation completed successfully.
 </pre>
