--- a/index.html
+++ b/index.html
@@ -3714,7 +3714,7 @@ Please make sure the order of passwords is maintained. The passwords are extract
 <blockquote>
 <p>Setpassword example commands:</p>
 
-<p>To set a new password, include the new password and the current password. When setting a bios or power on password with no previous password set, <code>OLD_PASSWORD</code> must be set to <code>&quot;&quot;</code> signifying no password.</p>
+<p>To set a new password, include the new password and the current password. When setting a bios or power on password with no previous password set, <code>CURRENTPASSWORD</code> must be set to <code>None</code> signifying no password.</p>
 </blockquote>
 
 <pre>
@@ -3724,7 +3724,7 @@ The operation completed successfully.
 </pre>
 
 <blockquote>
-<p>When setting a bios or power on password back to nothing, <code>NEW_PASSWORD</code> must be set to <code>&quot;&quot;</code>.</p>
+<p>When setting a bios or power on password back to nothing, <code>NEWPASSWORD</code> must be set to <code>None</code>.</p>
 </blockquote>
 
 <pre>
