--- a/index.html
+++ b/index.html
@@ -9726,7 +9726,7 @@ ilorest > <font color="#01a982">smartarray --controller=1</font>
 </blockquote>
 
 <pre>
-ilorest > <font color="#01a982">smartarray --controller=1 --pdrive=1</font>
+ilorest > <font color="#01a982">smartarray --controller=1 --pdrive=1E:1:1</font>
 {
   "BlockSizeBytes": 512,
   "CapacityGB": 400,
@@ -9822,7 +9822,7 @@ iLOrest > <font color="#01a982">smartarray --controller=1 --ldrive=1</font>
 <p>Use this flag to return the logical drives for the controller selected.</p>
 
 <ul>
-<li><strong>--pdrive=PDRIVE</strong></li>
+<li><strong>--pdrive=PDRIVE LOCATION</strong></li>
 </ul>
 
 <p>Use this flag to select the corresponding physical disk.</p>
