--- a/index.html
+++ b/index.html
@@ -9726,7 +9726,7 @@ ilorest > <font color="#01a982">smartarray --controller=1</font>
 </blockquote>
 
 <pre>
-ilorest > <font color="#01a982">smartarray --controller=1 --pdrive=1E:1:1</font>
+ilorest > <font color="#01a982">smartarray --controller=1 --pdrive=1I:3:4</font>
 {
   "BlockSizeBytes": 512,
   "CapacityGB": 400,
